// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the active child with disabledGap option 1`] = `
Array [
  <div
    class="tabsContainer nested disableGap"
  >
    <div
      class="tabs nested"
    >
      <div
        class="tabsContainerWrapper"
      >
        <ul
          class="tabsContainer"
        >
          <li
            class="tab nested selected"
          >
            <button
              disabled=""
              title="tabTitle1"
            >
              tabTitle1
            </button>
          </li>
          <li
            class="tab nested"
          >
            <button
              title="tabTitle2"
            >
              tabTitle2
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <h1>
    Child
  </h1>,
]
`;

exports[`Should render the children after the tabs 1`] = `
Array [
  <div
    class="tabsContainer root"
  >
    <div
      class="tabs root"
    >
      <div
        class="tabsContainerWrapper"
      >
        <ul
          class="tabsContainer"
        >
          <li
            class="tab root"
          >
            <button
              title="tabTitle1"
            >
              tabTitle1
            </button>
          </li>
          <li
            class="tab root"
          >
            <button
              title="tabTitle2"
            >
              tabTitle2
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <h1>
    Child
  </h1>,
]
`;

exports[`Should render the children with the passed props 1`] = `
Array [
  <div
    class="tabsContainer root"
  >
    <div
      class="tabs root"
    >
      <div
        class="tabsContainerWrapper"
      >
        <ul
          class="tabsContainer"
        >
          <li
            class="tab root"
          >
            <button
              title="tabTitle1"
            >
              tabTitle1
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <h2>
    Value
  </h2>,
]
`;

exports[`Should render the header between children and tabs 1`] = `
Array [
  <div
    class="tabsContainer root"
  >
    <div
      class="tabs root"
    >
      <div
        class="tabsContainerWrapper"
      >
        <ul
          class="tabsContainer"
        >
          <li
            class="tab root"
          >
            <button
              title="tabTitle1"
            >
              tabTitle1
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <h1>
    Header
  </h1>,
  <h2>
    Child
  </h2>,
]
`;
